Fix code block whitespace, ol numbers, finetune styles.

--- a/resources/public/assets/main.css
+++ b/resources/public/assets/main.css
@@ -720,8 +720,18 @@ html body p {
 
 html body ul {
   margin-bottom: 0.5rem;
+  list-style-position: inside;
   list-style-type: disc;
-  padding-left: 1rem;
+}
+
+html body ol {
+  margin-bottom: 0.5rem;
+  list-style-position: inside;
+  list-style-type: decimal;
+}
+
+html body ol li p {
+  display: inline-block;
 }
 
 html body li p {
@@ -1056,8 +1066,8 @@ body .content > .post {
 body .content > section,
 body .content .post-list,
 body .content > .post {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -1545,6 +1555,29 @@ body .content .card-list ul {
   display: inline;
 }
 
+/** Table */
+
+body table {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  --tw-border-spacing-x: 0.25rem;
+  --tw-border-spacing-y: 0.25rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+  border-width: 1px;
+}
+
+body table td,
+    body table th {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+  padding: 0.5rem;
+}
+
+body table p {
+  margin: 0px;
+}
+
 /**
  * Page specific styles 
  */
@@ -1661,6 +1694,11 @@ body .content .card-list ul {
 
 /** Post list page */
 
+body.postlist h1 {
+  margin-top: 2rem;
+  text-align: center;
+}
+
 body.postlist .post-list {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1730,30 +1768,7 @@ body.postlist .post h2 {
   border-bottom-width: 1px;
 }
 
-/** Table */
-
-body table {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  --tw-border-spacing-x: 0.25rem;
-  --tw-border-spacing-y: 0.25rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
-  border-width: 1px;
-}
-
-body table td,
-    body table th {
-  border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-  padding: 0.5rem;
-}
-
-body table p {
-  margin: 0px;
-}
-
-/** Post pages */
+/** Post page */
 
 body.post-page {
   font-size: 20px;
@@ -1773,6 +1788,7 @@ body.post-page .post-body {
 
 body.post-page code {
   display: block;
+  white-space: pre-wrap;
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
